# moonglide

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
docs/: bindings.md  configuration.md  getting-started.md  gyro.md  keys.md  sticks.md
src/: api.rs  bindings.lua  bindings.rs  config.rs  controller.rs  frame_pacer.rs  gyro.rs  gyro_state.rs  lua_coroutines.rs  main.rs  mapping.rs  meta.d.lua  output_devices.rs  stick.rs  style.rs
src/lua/: bindings.lua  events.lua  gyro.lua  sticks.lua  tables.lua
src/output/: keyboard.rs  keyboard_linux.rs  keyboard_windows.rs  mod.rs  mouse_linux.rs  mouse_windows.rs
